[gd_scene load_steps=13 format=3 uid="uid://dsh0x58d1nh5s"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://7scwn7erm15m" path="res://Images/capsule.png" id="2"]
[ext_resource type="Script" path="res://Scripts/PlayerPlatform.gd" id="3_g8637"]
[ext_resource type="Script" path="res://Scripts/Camera.gd" id="4_g7lqx"]
[ext_resource type="PackedScene" uid="uid://c56nyhommt4ev" path="res://Scenes/PlayerGui.tscn" id="5_wmojp"]
[ext_resource type="Script" path="res://Scripts/PlayerParticles.gd" id="6_1ild7"]
[ext_resource type="Shader" path="res://Scenes/LevelScreen.gdshader" id="6_cnwsl"]

[sub_resource type="CapsuleShape2D" id="1"]
height = 40.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p3ds4"]

[sub_resource type="SegmentShape2D" id="2"]
a = Vector2(-100, 0)
b = Vector2(100, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k480u"]
shader = ExtResource("6_cnwsl")

[sub_resource type="ViewportTexture" id="ViewportTexture_2gb5v"]
viewport_path = NodePath("CanvasLayer/SubViewportContainer/SubViewport")

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="Capsule" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.0990099, 0.0987654)
texture = ExtResource("2")

[node name="Mirrored" type="Sprite2D" parent="."]
position = Vector2(2.98023e-08, -5.96046e-08)
scale = Vector2(0.0990099, 0.0987654)
texture = ExtResource("2")

[node name="Camera2D" type="Camera2D" parent="."]
top_level = true
material = SubResource("ShaderMaterial_p3ds4")
script = ExtResource("4_g7lqx")

[node name="PlayerPlatform" type="StaticBody2D" parent="."]
script = ExtResource("3_g8637")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerPlatform"]
shape = SubResource("2")
disabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" parent="CanvasLayer" instance=ExtResource("5_wmojp")]
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_k480u")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_2gb5v")

[node name="PlayerParticles" type="Node2D" parent="."]
visible = false
script = ExtResource("6_1ild7")

[node name="WalkingParticles" type="CPUParticles2D" parent="PlayerParticles"]
z_index = -1
position = Vector2(0, 18)
emitting = false
particle_flag_align_y = true
direction = Vector2(1, -0.3)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 78.31
initial_velocity_max = 78.31
scale_amount_min = 4.0
scale_amount_max = 5.0
color = Color(0.254902, 0.243137, 0.219608, 1)

[node name="WalkingParticlesMirrored" type="CPUParticles2D" parent="PlayerParticles"]
z_index = -1
position = Vector2(0, 18)
emitting = false
particle_flag_align_y = true
direction = Vector2(1, 0.3)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 78.31
initial_velocity_max = 78.31
scale_amount_min = 4.0
scale_amount_max = 5.0
color = Color(0.254902, 0.243137, 0.219608, 1)
